--- a/soma/Cargo.toml
+++ b/soma/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2024"
 
 [dependencies]
 somacommon = { path = "../somacommon" }
+structopt = "0.3.26"
+
+[dev-dependencies]
+assert_cmd = "2.0.17"
+assert_fs = "1.1.3"
+predicates = "3.1.3"
