--- a/soma/Cargo.toml
+++ b/soma/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+serde_json = "1.0.140"
+serde = { version = "1.0.219", features = ["derive"] }
 somacommon = { path = "../somacommon" }
 structopt = "0.3.26"
 
